--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,21 @@
-title=Basic Template
-appTitle=Basic Template
-appDescription=Blank app as starting point for your app development
+title=Test ui5 tooling Updated
+appTitle=Test ui5 tooling Updated
+appDescription=This is to test the ui5 tooling deployment
+
+#~~~ Header Text ~~~~~~~~~~~~~~~~~~~~~~~
+DetailOf=Detail
+
+#~~~ Col Header Text ~~~~~~~~~~~~~~~~~~~~~~~
+Belnr=Document Number
+Bukrs=Company Code
+CitiPayStatus=Citi Payment Status
+Gjahr=Fiscal Year
+SftpStatus=SFTP Status
+
+#~~~ Error Handling ~~~~~~~~~~~~~~~~~~~~~~~
+#YMSG: Error dialog description
+errorText=Sorry, a technical error occurred! Please try again later.
+
+NotFound=Not Found
+NotFound.text=Sorry, but the requested resource is not available.
+NotFound.description=Please check the URL and try again.
